--- a/data-science-curriculum-build/exercises_sequenced/d01-e-setup01-packages-assignment.Rmd
+++ b/data-science-curriculum-build/exercises_sequenced/d01-e-setup01-packages-assignment.Rmd
@@ -26,12 +26,25 @@ knitr::opts_chunk$set(echo = TRUE)
 In [RStudio](https://bookdown.org/yihui/rmarkdown/r-code.html) use the shortcut
 `Ctrl + Alt + I` (`Cmd + Option + I` on Mac). Type the command
 `library(tidyverse`).
+```{r}
+library(tidyverse)
+```
 
 
 Make sure to load packages at the *beginning* of your notebooks! This is a
 best-practice.
 
 ### __q2__ Run the chunk with `library(tidyverse)`. What packages are loaded?
+- dplyr
+- forcats
+- ggplot2
+- lubridate
+- purrr
+- readr
+- stringr
+- tibble
+- tidyr
+
 
 In
 [RStudio](https://support.rstudio.com/hc/en-us/articles/200711853-Keyboard-Shortcuts)
@@ -40,6 +53,7 @@ cursor.
 
 
 ### __q3__ What are the main differences between `install.packages()` and `library()`? How often do you need to call each one?
+install.packages installs packages 
 
 
 <!-- include-exit-ticket -->
