--- a/data-science-curriculum-build/exercises_sequenced/d01-e-setup02-functions-assignment.Rmd
+++ b/data-science-curriculum-build/exercises_sequenced/d01-e-setup02-functions-assignment.Rmd
@@ -22,20 +22,26 @@ function's use.
 ### __q1__ How do you find help on a function? Get help on the built-in `rnorm` function.
 
 ```{r rnorm-help, eval=FALSE}
-## Your code here
+?rnorm
 ```
 
 ### __q2__ How do you show the source code for a function?
 
 ```{r rnorm-source}
-## Your code here
+rnorm
 ```
 
 ### __q3__ Using either the documentation or the source, determine the arguments for `rnorm`.
-
+n = #samples
+mean = mean of distribution
+sd = standard deviation of distribution
 
 ### __q4__ Scroll to the bottom of the help for the `library()` function. How do you
 list all available packages?
+```{r}
+?library()
+```
+Write "library()"
 
 
 The __examples__ in the help documentation are often *extremely* helpful for
