--- a/data-science-curriculum-build/exercises_sequenced/d02-e-setup03-docs-assignment.Rmd
+++ b/data-science-curriculum-build/exercises_sequenced/d02-e-setup03-docs-assignment.Rmd
@@ -31,6 +31,8 @@ associated with `"dplyr"`. What vignettes are available?
 
 ```{r q1-task, eval=FALSE}
 ## TODO: Re-write the code above following the tidyverse style guide
+vignette(package = "dplyr")
+# available vignettes: colwise, base, grouping, dplyr, programming, rowwise, two-table, in-packages, window-functions
 ```
 
 
@@ -44,10 +46,12 @@ only those rows of the `iris` dataset where `Species == "setosa"`.
 *Note*: This should open up your browser.
 
 ```{r q2-task}
+vignette("dplyr", package = "dplyr")
 iris %>%
   as_tibble() %>%
   filter(
     # TODO: Filter on Species "setosa"
+    Species == "setosa"
   )
 ```
 
@@ -57,6 +61,7 @@ we know the verbs (functions) we want to use, we need more specific help.
 ### __q3__ Remember back to `e-setup02-functions`; how do we look up help for a
 specific function?
 
+"help()" or "?"
 
 Sometimes we'll be working with a function, but we won't *quite* know how to get
 it to do what we need. In this case, consulting the function's documentation can
@@ -68,6 +73,9 @@ with `Sepal.Length` between `5.1` and `6.4`?
 
 ```{r q3-task}
 ## TODO: Consult the docs; Write your code here
+?filter()
+
+filter(iris, between(Sepal.Length, 5.1, 6.4)) 
 ```
 
 
@@ -78,7 +86,11 @@ learn more.
 
 ### __q5__ Look up the documentation on `cut_number`; what package does it come
 from? What about `parse_number()`? What about `row_number()`?
-
+```{r}
+?cut_number #package: ggplot2
+?parse_number() #package: readr
+?row_number() #package: dplyr
+```
 
 <!-- include-exit-ticket -->
 # Exit Ticket
