--- a/data-science-curriculum-build-2/exercises_sequenced/d03-e-comm00-style-assignment.Rmd
+++ b/data-science-curriculum-build-2/exercises_sequenced/d03-e-comm00-style-assignment.Rmd
@@ -34,6 +34,10 @@ summarize(group_by(diamonds, cut), mean_price = mean(price))
 
 ```{r q1-solution}
 ## TODO: Re-write the code above following the tidyverse style guide
+diamonds %>% 
+  group_by(cut) %>% 
+  summarize(mean_price = mean(price))
+
 ```
 
 ### __q2__ Re-write according to the style guide
@@ -53,6 +57,7 @@ iris %>%
 
 ```{r q2-solution}
 ## TODO: Re-write the code above following the tidyverse style guide
+
 ```
 
 ### __q3__ Re-write according to the style guide
