--- a/data-science-curriculum-build-2/challenges/c06-covid19-assignment.Rmd
+++ b/data-science-curriculum-build-2/challenges/c06-covid19-assignment.Rmd
@@ -78,8 +78,8 @@ That's the high-level view; now let's dig into the details.
 *Hint*: You will need to use the `skip` keyword when loading these data!
 
 ```{r q1-task}
-## TASK: Load the census bureau data with the following tibble name.
-df_pop <- read.csv('/Users/aidanschneider_1/Documents/Olin/2025_Spring/Data_Science/data-science-sp2025/data-science-curriculum-build-2/challenges/data/productDownload_2025-03-12T114212/ACSDT5Y2018.B01003-Data.csv', skip = 1)
+## TASK: Load the census bureau data with the following tibble name. (REVISION)
+df_pop <- read_csv('/Users/aidanschneider_1/Documents/Olin/2025_Spring/Data_Science/data-science-sp2025/data-science-curriculum-build-2/challenges/data/productDownload_2025-03-12T114212/ACSDT5Y2018.B01003-Data.csv', skip = 1)
 ```
 
 *Note*: You can find information on 1-year, 3-year, and 5-year estimates [here](https://www.census.gov/programs-surveys/acs/guidance/estimates.html). The punchline is that 5-year estimates are more reliable but less current.
@@ -138,7 +138,9 @@ To join these datasets, we'll need to use [FIPS county codes](https://en.wikiped
 ```{r q3-task}
 ## TASK: Create a `fips` column by extracting the county code
 df_q3 <- df_pop %>% 
-  mutate(fips = substr(Geography, nchar(Geography)-4, nchar(Geography)))
+  mutate(fips = substr(Geography, nchar(Geography)-4, nchar(Geography))) %>% 
+  rename(Geographic.Area.Name = `Geographic Area Name`)
+
 ```
 
 Use the following test to check your answer.
@@ -158,7 +160,7 @@ print("Very good!")
 
 ```{r q4-task}
 ## TASK: Join df_covid and df_q3 by fips.
-df_q4 <- merge(df_covid, df_q3, by = "fips", all.x = TRUE)
+df_q4 <- merge(df_covid, df_q3, by = "fips", all.x = TRUE) 
 ```
 
 Use the following test to check your answer.
@@ -194,6 +196,7 @@ print("Very good!")
 For convenience, I down-select some columns and produce more convenient column
 names.
 
+
 ```{r rename}
 ## NOTE: No need to change; run this to produce a more convenient tibble
 df_data <-
@@ -205,7 +208,7 @@ df_data <-
     fips,
     cases,
     deaths,
-    population = `Estimate..Total` #Note: Changed "Estimate!!Total" to "Estimate..Total" to reflect actual column name
+    population = `Estimate!!Total` #Note: Changed "Estimate!!Total" to "Estimate..Total" to reflect actual column name
   )
 ```
 
@@ -295,20 +298,23 @@ Compute the mean and standard deviation for `cases_per100k` and `deaths_per100k`
 ```{r q6-task}
 ## TASK: Compute mean and sd for cases_per100k and deaths_per100k
 
-df_normalized %>% 
+
+df_q6 <- df_normalized %>%
+  filter(between(date, as.Date('2020-01-01'), as.Date('2020-12-31'))) %>% 
   summarise(mean_casesper100k = mean(cases_per100k, na.rm = TRUE), 
             mean_deathsper100k = mean(deaths_per100k, na.rm = TRUE), 
             std_casesper100k = sd(cases_per100k, na.rm = TRUE), 
             std_deathsper100k = sd(deaths_per100k, na.rm = TRUE)
             )
 
+df_q6
 ```
 
 - Which rows did you pick?
-  - I only took the mean and standard deviation of the rows that did not contain NA values
+  - I only took the mean and standard deviation of the rows from the year 2020
 - Why?
-  - If I were to take the mean or standard deviation of a column including the NA rows I would get NA as a result
-
+  - COVID19 was a more severe pandemic during 2020 due to unfamiliarity with the virus and lack of vaccines
+  
 ### __q7__ Find and compare the top 10
 
 Find the top 10 counties in terms of `cases_per100k`, and the top 10 in terms of `deaths_per100k`. Report the population of each county along with the per-100,000 counts. Compare the counts against the mean values you found in q6. Note any observations.
@@ -317,29 +323,30 @@ Find the top 10 counties in terms of `cases_per100k`, and the top 10 in terms of
 ## TASK: Find the top 10 max cases_per100k counties; report populations as well
 
 top10_cases <- df_normalized %>% 
+  filter(between(date, as.Date('2020-01-01'), as.Date('2020-12-31'))) %>% 
   arrange(desc(cases_per100k)) %>% 
   slice_head(n = 10)
 
-
+top10_cases
 
 ## TASK: Find the top 10 deaths_per100k counties; report populations as well
 
 top10_deaths <- df_normalized %>% 
+  filter(between(date, as.Date('2020-01-01'), as.Date('2020-12-31'))) %>% 
   arrange(desc(deaths_per100k)) %>% 
   slice_head(n = 10)
 
-
+top10_deaths
 
 ```
 
 **Observations**:
 
-- The counties with the highest case rate and death rate are both located in Texas (Loving and McMullen)
-- Both of these counties have relatively small populations (Loving = 102 lowest in the US, McMullen = 662)
-  - this may be why the cases and deaths per 100k people are the highest, as only a few cases and deaths creates a larger ratio in counties with 
-    such small populations than in counties with larger populations
+- The county with the highest case rate during 2020 was Crowley, CO, while the county with the highest death rate in 2020 was Gove, KS.
+- Both of these counties have relatively small populations (Cowley = 5630, Gove = 2619)
+  - this may be why the cases and deaths per 100k people are the highest, as only a few cases and deaths creates a larger ratio in counties with such small populations than in counties with larger populations
 - When did these "largest values" occur?
-  - The largest values occured mostly around March-May of 2022
+  - The largest case rate values occured around December of 2020, while the largest death rates occured around November/December of 2020
 
 ## Self-directed EDA
 <!-- ------------------------- -->
@@ -357,40 +364,33 @@ top10_deaths <- df_normalized %>%
 - Your own idea!
 
 
-QUESTION: How did the average amount of cases change by state throughout the course of COVID?  
+QUESTION:
 
 
 ```{r}
 
-df_eda <- df_normalized %>% 
-  mutate(
-    year = year(date),
-    month = month(date),
-  ) %>% 
-  group_by(year, month, state) %>% 
+df_eda <- df_normalized %>%
+  mutate(month_name = month(date, label = TRUE, abbr = TRUE)) %>%
+  group_by(month_name) %>%
   summarise(
-    avg_casesper100k = mean(cases_per100k, na.rm = TRUE),
+    avg_cases_per100k = mean(cases_per100k, na.rm = TRUE),
     .groups = "drop"
   )
 
-ggplot(df_eda, aes(x = as.Date(paste(year, month, "01", sep = "-")), y = avg_casesper100k, color = state)) +
-  geom_line(aes(color = state), size = 1, alpha = 0.4) + # Color each state's line
-  theme(legend.position="none") +
+df_eda %>% 
+  ggplot(aes(x = month_name, y = avg_cases_per100k)) +
+  geom_col(fill = "darkblue") +
   labs(
-    title = "Cases Per 100k people by State Over Time",
-    x = 'Date',
-    y = 'Cases per 100k people'
-    )
-
+    title = "Average COVID-19 Cases per 100k by Calendar Month",
+    x = "Month",
+    y = "Avg Cases per 100k"
+  )
 
   
   
 ```
 
-Here we can observe that the cases per 100k people increased over the course of COVID, with periods of 
-plateuing. These plateus can be attributed to vaccines being developed for different strains or tightening
-of quarantine restricitions, and the sharp increases can be attributed to new strains or loosening of 
-quarantine restrictions. 
+Here we can observe that late-winter and early-spring months (Jan-Mar) experience a higher amount of COVID19 cases on average than every other month, while almost exclusively summer months (Jun-Aug) experience the least amount of cases per 100k on average. More specifically February experiences the most amount of infections per 100k on average and June experiences the least amount of infections per 100k on average. This may be due to colder winter temperatures which force people indoors, causing closer contact (and thus higher rates of infections) than there would be in warmer summer months. 
 
 ### Aside: Some visualization tricks
 <!-- ------------------------- -->
